--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,25 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "python.autoComplete.extraPaths": [
+        "/home/robotics/experiment_setup/robot_ws/install/ur_robot_driver/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/ur_msgs/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/ur_moveit_config/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/ur_dashboard_msgs/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/sensor_offset/lib/python3.10/site-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/rokubimini_msgs/local/lib/python3.10/dist-packages",
+        "/opt/ros/humble/lib/python3.10/site-packages",
+        "/opt/ros/humble/local/lib/python3.10/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/robotics/experiment_setup/robot_ws/install/ur_robot_driver/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/ur_msgs/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/ur_moveit_config/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/ur_dashboard_msgs/local/lib/python3.10/dist-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/sensor_offset/lib/python3.10/site-packages",
+        "/home/robotics/experiment_setup/robot_ws/install/rokubimini_msgs/local/lib/python3.10/dist-packages",
+        "/opt/ros/humble/lib/python3.10/site-packages",
+        "/opt/ros/humble/local/lib/python3.10/dist-packages"
+    ]
 }
